packages/easy-email-extensions/src/BlockLayer/index.module.scss
.title {
  display: flex;
  flex: 1;
  justify-content: space-between;
  align-items: center;
  position: relative;

  :global {
    .icon-eye {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      right: 30px;
      opacity: 0;
      font-size: 14px;
      color: rgb(var(--primary-6)) !important;
    }
    .icon-eye-invisible {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      font-size: 14px;
      right: 30px;
      opacity: 1 !important;
      color: rgb(var(--primary-6)) !important;
    }
  }
}
:global(#BlockLayerManager .arco-tree-node-expanded) {
  overflow: hidden;
}

:global(#BlockLayerManager .arco-tree-node-selected .arco-tree-node-title) {
  background-color: rgb(var(--primary-1));
}
:global(#BlockLayerManager .arco-tree-node-title:hover .icon-eye) {
  opacity: 1;
}
:global(#BlockLayerManager .arco-tree-node-indent-block) {
  width: 8px;
}
:global(#BlockLayerManager .arco-tree-node-drag-icon) {
  cursor: grab;
}

